# Helldivers-Commander

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_m2_timescale_schema.py  20260606_0001_m2_persistence.py
backend/app/: cache.py  config.py  constants.py  main.py  persistence.py
backend/app/api/: deps.py  routes_briefing.py  routes_dispatches.py  routes_graph.py  routes_health.py  routes_orders.py  routes_planets.py  routes_war.py  stream.py
backend/app/briefing/: llm.py
backend/app/clients/: base.py  steam.py  upstream.py
backend/app/clients/sources/: community.py  diveharder.py  raw.py  training.py
backend/app/derive/: graph.py  liberation.py  orders.py
backend/app/ingest/: worker.py
backend/app/models/: db.py  domain.py
backend/tests/: test_community_normalization.py  test_graph_derivation.py  test_ingest_worker.py  test_liberation_derivation.py  test_new_source_normalization.py  test_order_probability.py  test_orders_api.py  test_planets_api.py  test_upstream_fallback.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BriefingCard.tsx  DispatchFeed.tsx  OrderTracker.tsx  PlanetPanel.tsx  WarStats.tsx
frontend/src/hooks/: useWarStream.ts
frontend/src/theme/: crt.css
frontend/src/three/: GalaxyMap.tsx  (+3 more)
