[project]
name = "wardesk-backend"
version = "0.1.0"
description = "WarDesk Helldivers 2 galactic war companion backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "apscheduler>=3.10,<4",
  "sse-starlette>=2.1",
  "numpy>=1.26",
  "scipy>=1.12",
  "networkx>=3.2",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "mypy>=1.10", "ruff>=0.5"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
